# eskape-model-standalone

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  eskape_test_input.csv  pyproject.toml
.github/workflows/: release.yml  test.yml
src/eskape_model/: eskape_model.py
