[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eskape_model"
description = "The ESKAPE Model is a machine learning-based online resource to facilitate discovery of novel antibiotics against the ESKAPE pathogens."
version = "1.0.2"
dependencies = [
  "joblib",
  "biopython",
  "chemprop==1.6.1",
  "chemfunc==1.0.10",
  "scikit-learn==1.3.2",
  "numpy==1.26.4"
]
authors = [
  { name="Amogelang R. Raphenya", email="raphenar@mcmaster.ca" },
]
maintainers = [
  {name = "Amogelang R. Raphenya", email = "raphenar@mcmaster.ca"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["antibiotics","discovery","ESKAPE", "pathogens","machine learning"]

[project.scripts]
eskape_model = "eskape_model:eskape_model.main"

[project.urls]
Homepage = "https://github.com/raphenya/eskape-model-standalone"
Issues = "https://github.com/raphenya/eskape-model-standalone/issues"

[tool.setuptools]
include-package-data = true
